# RLinf

./: pyproject.toml
examples/embodiment/config/: realworld_eval_arx_x5_dual_pi05.yaml
examples/embodiment/config/env/: realworld_arx_x5_dual_joint.yaml
requirements/: install.sh
rlinf/envs/realworld/: __init__.py
rlinf/envs/realworld/arx_x5_dual/: __init__.py  arx_x5_dual_controller.py  arx_x5_dual_env.py  arx_x5_dual_robot_state.py
rlinf/envs/realworld/arx_x5_dual/tasks/: __init__.py
rlinf/models/embodiment/openpi/dataconfig/: __init__.py  arx_x5_dual_dataconfig.py
rlinf/models/embodiment/openpi/policies/: arx_x5_dual_policy.py
tests/unit_tests/: test_arx_x5_dual_env.py  test_arx_x5_dual_openpi_policy.py
toolkits/realworld_check/: test_arx_x5_dual.py  test_arx_x5_dual_read.py
