[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlinf"
version = "0.3.0"
authors = [{ name = "RLinf Contributors" }]
description = "Reinforcement Learning Infrastructure for Embodied and Agentic AI"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "reinforcement-learning",
    "embodied-intelligence",
    "large-language-models",
]
classifiers = [
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]


dependencies = [
    # Core System
    # These are the dependencies of the core scheduler
    "ray[default]>=2.47.0",
    "torch>=2.5.0",
    "hydra-core",
    "numpy",

    # Data processing
    "datasets",
    "torchdata",
    "scipy",

    # Utilities
    "accelerate",
    "debugpy",
    "einops",
    "nvitop",
    "pybind11",
    "setuptools",
    "ninja",
    "pytest",
    "gsutil",
    "ruff",
    "pre-commit",
    "liger_kernel; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "uv",
    "pip",
    "huggingface_hub",
    "icmplib",

    # Logging
    "wandb<0.25.1",
    "swanlab>=0.6.11",
    "tensorboard",

    "sortedcontainers"
]

[project.urls]
Homepage = "https://github.com/RLinf/RLinf"
Repository = "https://github.com/RLinf/RLinf"
Documentation = "https://rlinf.readthedocs.io/"
"Bug Report" = "https://github.com/RLinf/RLinf/issues"

[project.optional-dependencies]
agentic-sglang = [
    "sglang[all]==0.4.6.post5",
    "sglang-router",
    "torch-memory-saver",
    "numpy==2.2",
    "transformers==4.51.1",
    # uvloop is not compatible with simulators, put it here
    "uvloop==0.21.0",
    "hydra-core==1.4.0.dev1",
    "omegaconf==2.4.0.dev4",
    "word2number",
    "regex",
    "peft==0.11.1",
    "rlinf_latex2sympy2",
    "mcp",
]
agentic-vllm = [
    "vllm==0.8.5",
    "numpy==2.2",
    "transformers==4.51.1",
    # uvloop is not compatible with simulators, put it here
    "uvloop==0.21.0",
    "hydra-core==1.4.0.dev1",
    "omegaconf==2.4.0.dev4",
    "word2number",
    "regex",
    "peft==0.11.1",
    "rlinf_latex2sympy2",
    "mcp",
]
embodied = [
    "transformers<=4.57.6",
    "torchcodec",
    "peft",
    "timm",
    "imageio[ffmpeg]",
    "gymnasium",
    "gym",
]
franka = [
    "pyyaml",
    "rospkg",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "empy==3.3.4",
    "gymnasium==0.29.1",
    "pyquaternion",
    "opencv-python",
    "defusedxml",
    "pyspacemouse>=2.0.0",
    "pymodbus>=3.0,<4.0",
    "pyserial",
    "imageio[ffmpeg]",
    "evdev",
    "numpy<2",
    # lerobot is installed from a pinned git commit by requirements/install.sh
    # (PyPI forbids direct-URL deps in published packages).
    "pyzmq",
    "websockets"
]
xsquare_turtle2 = [
    "pyyaml",
    "rospkg",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "toppra==0.6.3",
    "numpy==1.26.4",
    "empy==3.3.4",
    "gymnasium==0.29.1",
    "pyquaternion",
    "opencv-python",
    "defusedxml",
    "pyspacemouse>=2.0.0",
    "imageio[ffmpeg]",
    "evdev",
    # lerobot is installed from a pinned git commit by requirements/install.sh
    # (PyPI forbids direct-URL deps in published packages).
]
arx_x5_dual = [
    # 0.1.3 fixes X5 (2025) reversed-gripper over-current protection, but its
    # 0.1.3 PyPI release only publishes x86_64 wheels. Keep ARM64 on the
    # newest release for which an aarch64 wheel is available.
    "arx5-interface==0.1.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "arx5-interface==0.1.2; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pyyaml",
    "numpy==1.26.4",
    "gymnasium==0.29.1",
    "opencv-python",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "imageio[ffmpeg]",
    "evdev",
    "pyspacemouse>=2.0.0",

    # lerobot is installed from a pinned git commit by requirements/install.sh
    # (PyPI forbids direct-URL deps in published packages).
]
gim_arm = [
    # gim_arm_control SDK: install separately via
    #   pip install -e /path/to/gim_arm_control/python
    # (brings in pinocchio as a transitive runtime dependency)
    "numpy",
    "scipy",
    "gymnasium",
    "opencv-python",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "imageio[ffmpeg]",
]

[tool.uv]
prerelease = "allow"
conflicts = [
    [
      { extra = "agentic-sglang" },
      { extra = "agentic-vllm" },
      { extra = "embodied" },
      { extra = "franka" },
      { extra = "xsquare_turtle2" },
      { extra = "arx_x5_dual" },
      { extra = "gim_arm" }
    ],
]
override-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "torchcodec==0.2",
    "xgrammar==0.1.19",
    "uvloop==0.21.0",
    "tensorflow-addons==0.23.0 ; platform_machine == 'x86_64'",
    "setuptools>=69.5.1,<75.9",
    "datasets==3.6.0",
    "pywin32==306; sys_platform == 'win32'",
    "sympy>=1.13.1",
    "tensorflow-metadata<=1.17.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rlinf*"]
exclude = ["tests*", "docs*", "examples*", "docker*", "toolkits*"]

[tool.setuptools.package-data]
rlinf = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
isort = {known-first-party = ["rlinf"]}
select = ["C", "E", "F", "I", "W", "CPY001", "RUF013", "UP006", "PERF102", "PLC1802", "PLC0208", "D", "RUF002", "DOC102", "DOC202", "DOC403", "DOC502"]
ignore = [
    "C901", # "complex-structure"
    "E501", # "line-too-long"
    "E741", # "ambiguous-variable-name"
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D203", # "incorrect-blank-line-before-class", conflict with D211,
    "D213", # "multi-line-summary-second-line", conflict with D212
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Only enable docstring check for the scheduler module for now.
"!rlinf/scheduler/**.py" = ["D", "RUF002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
